<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/vAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_320dp"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/vCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="48dp"
            app:expandedTitleMarginStart="@dimen/size_82dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/simple_activity"
            >

            <ImageView
                android:id="@+id/imCat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cat"
                app:layout_collapseMode="parallax"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/size_4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_anchor="@id/vAppBarLayout"
        app:layout_anchorGravity="bottom"
        app:title="@string/detail"
        style="@style/ToolbarWithNavigationBack"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/vNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <TextView
            android:id="@+id/tvSimpleContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingExtra="@dimen/size_8dp"
            android:padding="@dimen/size_16dp"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/TextAppearance.Simple"
            />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>