<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/vAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/vCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            app:layout_scrollFlags="scroll|snap"
            >

            <ImageView
                android:id="@+id/imCat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cat"
                app:layout_collapseMode="parallax"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/vToolbar"
            style="@style/ToolbarWithNavigationBack"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:title="@string/profile"
            />

        <LinearLayout
            android:id="@+id/vTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4dp"
                android:layout_marginBottom="@dimen/size_4dp"
                android:text="@string/subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/vTabLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/size_4dp"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/vFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/size_8dp"
        android:elevation="@dimen/size_16dp"
        android:src="@drawable/ic_add"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/vCircleImageView"
        android:layout_width="@dimen/size_96dp"
        android:layout_height="@dimen/size_96dp"
        android:layout_gravity="center_horizontal"
        android:elevation="@dimen/size_4dp"
        android:src="@drawable/avatar"
        app:layout_anchor="@id/vTitleContainer"
        app:layout_anchorGravity="top|center"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>